# ensembl-web-metadata-api

./: .dockerignore  .env  .env.sample  .gitignore  .gitlab-ci.yml  APISpecification.yaml  Dockerfile  README.md  docker-compose.yml  dump_species_search_data.py  fields-map.json  index.html  pull_request_template.md  pyproject.toml  requirements.txt  species-stats-spec.yaml  test_grpc_connection.py
.github/workflows/: deploy-docs-openapi.yaml  deploy-docs.yml
app/: main.py  meta_main.py
app/api/: error_response.py
app/api/models/: checksums.py  ftplinks.py  genome.py  karyotype.py  popular_species.py  region_validation.py  statistics.py  vep.py
app/api/resources/: grpc_client.py  metadata.py  redis.py  utils.py
app/core/: config.py
app/ensembl/production/metadata/api/adaptors/: release.py
app/tests/test_api/test_resources/: test_metadata.py
app/tests/test_core/: test_config.py  test_grpc_connection.py
app/utils/: metadata_client.py
data/: README.md
docs/: APISpecification.yaml  index.html
experiments/go/: README.md  buf.gen.yaml  buf.yaml  go.mod  main.go
experiments/go/proto/: ensembl_metadata.proto
experiments/go/stubs/: ensembl_metadata.pb.go  ensembl_metadata.pb.gw.go  ensembl_metadata_grpc.pb.go
flask/: Dockerfile.flask  app.py  deployment.yaml  ftp_test.pl  http_test.pl  requirements.txt
k8s/base/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  pvc.yaml  redis-deployment.yaml  secret.yaml  service.yaml
k8s/overlays/dev/: ingress-host-patch.yaml  kustomization.yaml
k8s/overlays/prod/: ingress-host-patch.yaml  kustomization.yaml
k8s/overlays/staging/: ingress-host-patch.yaml
scripts/: generate_duckdb.py
species-search-dump/: config.ini.example  dump_species_search_data.py  dump_species_search_data_from_metadata.py  missing_genebuild_2024-09-03.csv  pyproject.toml
sql/: 010_create_genome_counts.sql  README.md
src/: config.py  dependencies.py  main.py
src/api/: config.py  dependencies.py  error_response.py  main.py
src/api/models/: logic.py  meta_adaptor.py
src/api/resources/: health.py  metadata.py  redis.py  routes.py
src/api/schemas/: ftplinks.py  genome.py  karyotype.py  region_validation.py  statistics.py  vep.py
src/ensembl/production/metadata/api/adaptors/: base.py  genome.py  vep.py
src/ensembl/utils/: __init__.py
src/ensembl/utils/database/: __init__.py  dbconnection.py
tests/: test_config.py
tests/api/models/: test_meta_adaptor.py
tests/api/resources/: test_routes.py
tests/api/schemas/: test_genome.py
tests/api/test_resources/: test_metadata.py
tools/: build_meta_key_list.py
