[tool.poetry]
name = "Ensembl_web_metadata_API"
version = "0.0.0"
description = "FastAPI application ."
authors = ["Web team <ensembl-webteam@ebi.ac.uk>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.57.0"
pydantic = "^1.5.1"
starlette = "^0.13.4"
loguru = "^0.5.1"
aiohttp = "^3.8.4"
uvicorn = "^0.22.0"
black = "^23.3.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.pytest]
minversion = "9.0"
pythonpath = ["src"]
testpaths = ["tests"]
