[project]
name = "ensembl_web_metadata_api"
description = "REST API for web metadata"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Ensembl web team", email = "ensembl-webteam@ebi.ac.uk" },
    { name = "Ensembl platform team", email = "ensembl-platform@ebi.ac.uk" }
]
license = "Apache-2.0"
# redis>=7.3.0 needs Python >= 3.10
requires-python = ">=3.10"
dependencies = [
    "annotated-types>=0.7.0",
    "duckdb>=1.5.0",
    "duckdb-engine>=0.17.0",
    "ensembl-metadata-api",
    "ensembl-py",
    "exceptiongroup>=1.3.1",
    "fastapi>=0.135.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "redis>=7.3.0",
    "requests>=2.32.5",
    "six>=1.17.0",
    "sqlalchemy==2.0.43",
    "sqlalchemy-utils>=0.42.1",
    "starlette>=0.52.1",
    "typing-extensions>=4.15.0",
    "ujson>=5.12.0",
    "uvicorn>=0.42.0",
]
packages = [
    { include = "src" },
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = ["api"]

[tool.uv.sources]
ensembl-metadata-api = { git = "https://github.com/Ensembl/ensembl-metadata-api", rev = "44b5d74" }
ensembl-py = { git = "https://github.com/Ensembl/ensembl-py" }

[tool.pytest]
minversion = "9.0"
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
]
